# mine3-20190703

mine3/devel/: .catkin  .rosinstall  setup.sh
mine3/devel/include/package/: xsxx.h  xx.h
mine3/devel/include/package1/: xsxx.h  xx.h
mine3/devel/lib/package/: node1  node2
mine3/devel/lib/package1/: node1  node2
mine3/devel/lib/pkgconfig/: package.pc  package1.pc
mine3/devel/lib/python2.7/dist-packages/package/msg/: __init__.py  _xsxx.py  _xx.py
mine3/devel/lib/python2.7/dist-packages/package1/msg/: _xsxx.py  _xx.py
mine3/devel/share/common-lisp/ros/package/msg/: _package.lisp  _package_xsxx.lisp  _package_xx.lisp  package-msg.asd  xsxx.lisp  xx.lisp
mine3/devel/share/common-lisp/ros/package1/msg/: _package.lisp  _package_xsxx.lisp  _package_xx.lisp  package1-msg.asd  xsxx.lisp  xx.lisp
mine3/devel/share/gennodejs/ros/package/msg/: xsxx.js  xx.js
mine3/devel/share/gennodejs/ros/package1/msg/: _index.js  xsxx.js  xx.js
mine3/devel/share/msg/cmake/: msg-msg-paths.cmake
mine3/devel/share/package/cmake/: package-msg-extras.cmake  package-msg-paths.cmake  packageConfig.cmake
mine3/devel/share/package1/cmake/: package1-msg-extras.cmake  package1-msg-paths.cmake  package1Config.cmake
mine3/devel/share/roseus/ros/package/: manifest.l
mine3/devel/share/roseus/ros/package/msg/: xsxx.l  xx.l
mine3/devel/share/roseus/ros/package1/: manifest.l
mine3/devel/share/roseus/ros/package1/msg/: xsxx.l  xx.l
mine3/src/package1/: CMakeLists.txt
mine3/src/package1/msg/: xsxx.msg  xx.msg
mine3/src/package1/src/: node1.cpp  node2.cpp  xxxt.cpp  xxxt.h
